experimental/parser/testdata/parser/method/options.proto.stderr.txt
error: service method cannot specify compact options
  --> testdata/parser/method/options.proto:20:41
   |
20 |     rpc Bar1(foo.Bar) returns (foo.Bar) [not.(allowed).here = 42];
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                          |
   |                                          help: remove this
   |
   = note: service method options are applied using `option`; declarations in
           the `{...}` following the method definition

encountered 1 error
